--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -13,8 +18,8 @@
   <body>
     <!-- Page 1 -->
     <section id="page-1" class="page">
-      <h1>Welcome to my presentation</h1>
-      <p>
+      <h1 class="main-heading animate-ver">Welcome to my presentation</h1>
+      <p class="content animate-hor">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
         doloremque voluptate dicta, sunt inventore, numquam aut harum, omnis
         suscipit veniam temporibus officia dolores itaque expedita distinctio
@@ -23,15 +28,15 @@
       </p>
       <div>
         <a href="#page-2" class="btn"
-          >Next page<i class="fas fa-arrow-circle-down"></i
+          >Next page <i class="fas fa-arrow-circle-down"></i
         ></a>
       </div>
     </section>
 
     <!-- Page 2 -->
     <section id="page-2" class="page">
-      <h1>Page Two</h1>
-      <p>
+      <h1 class="main-heading">Page Two</h1>
+      <p class="content">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
         doloremque voluptate dicta, sunt inventore, numquam aut harum, omnis
         suscipit veniam temporibus officia dolores itaque expedita distinctio
@@ -40,18 +45,18 @@
       </p>
       <div>
         <a href="#page-1" class="btn btn-dark"
-          >Prev page<i class="fas fa-arrow-circle-up"></i
+          >Prev page <i class="fas fa-arrow-circle-up"></i
         ></a>
         <a href="#page-3" class="btn"
-          >Next page<i class="fas fa-arrow-circle-down"></i
+          >Next page <i class="fas fa-arrow-circle-down"></i
         ></a>
       </div>
     </section>
 
     <!-- Page 3 -->
     <section id="page-3" class="page">
-      <h1>Page Three</h1>
-      <p>
+      <h1 class="main-heading">Page Three</h1>
+      <p class="content">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
         doloremque voluptate dicta, sunt inventore, numquam aut harum, omnis
         suscipit veniam temporibus officia dolores itaque expedita distinctio
@@ -60,18 +65,18 @@
       </p>
       <div>
         <a href="#page-2" class="btn btn-dark"
-          >Prev page<i class="fas fa-arrow-circle-up"></i
+          >Prev page <i class="fas fa-arrow-circle-up"></i
         ></a>
         <a href="#page-4" class="btn"
-          >Next page<i class="fas fa-arrow-circle-down"></i
+          >Next page <i class="fas fa-arrow-circle-down"></i
         ></a>
       </div>
     </section>
 
     <!-- Page 4 -->
     <section id="page-4" class="page">
-      <h1>Page Four</h1>
-      <p>
+      <h1 class="main-heading">Page Four</h1>
+      <p class="content">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
         doloremque voluptate dicta, sunt inventore, numquam aut harum, omnis
         suscipit veniam temporibus officia dolores itaque expedita distinctio
@@ -79,10 +84,28 @@
         magnam repellendus ducimus molestiae dolorem tempore!
       </p>
       <div>
-        <a href="#page-4" class="btn"
-          >Prev page<i class="fas fa-arrow-circle-up"></i
+        <a href="#page-3" class="btn"
+          >Prev page <i class="fas fa-arrow-circle-up"></i
         ></a>
       </div>
     </section>
+    <script>
+      const links = document.querySelectorAll(".btn");
+
+      const smoothScroll = function (e) {
+        e.preventDefault();
+        const href = this.getAttribute("href");
+        const offsetTop = document.querySelector(href).offsetTop;
+
+        scroll({
+          top: offsetTop,
+          behavior: "smooth",
+        });
+      };
+
+      links.forEach((link) => {
+        link.addEventListener("click", smoothScroll);
+      });
+    </script>
   </body>
 </html>
